# draftright

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  HANDOVER-2026-05-21.md  HANDOVER-2026-07-21-paypal.md  Package.swift  README.md  docker-compose.dev.yml  docker-compose.yml  pubspec.yaml
DraftRight/: AppIcon.icns  AppModel.swift  CLAUDE.md  DraftRight.entitlements  DraftRightApp.swift  Info.plist
DraftRightLinux/: CLAUDE.md  draftright-launch.sh  install-service.sh  meson.build  requirements.txt  setup.py  start-server.sh
DraftRightLinux/draftright/: __main__.py  __version__.py  application.py  main.py
DraftRightLinux/draftright/helpers/: display_server.py
DraftRightLinux/draftright/models/: payment.py  tone.py
DraftRightLinux/draftright/resources/: draftright.gresource.xml  style.css
DraftRightLinux/draftright/services/: api_client.py  auth_service.py  clipboard_service.py  error_reporter.py  feedback_service.py  hotkey_service.py  logger.py  payment_service.py  settings_service.py  text_injector.py  update_service.py
DraftRightLinux/draftright/ui/: checkout_dialogs.py  payment_status_banner.py  rewrite_panel.py  settings_window.py  subscription_page.py  suggest_feature_dialog.py  tray_icon.py
DraftRightLinux/packaging/deb/: control
DraftRightLinux/packaging/flatpak/: com.draftright.app.yml
DraftRightMobile/: .gitignore  CLAUDE.md  pubspec.yaml
DraftRightWindows/: Directory.Build.noop-stubs.targets  Directory.Build.targets  DraftRightWindows.sln  UnpackagedShims.targets  generate-pri.ps1  install-service.ps1  start-server.ps1
lib/: main.dart
(+1605 files in other folders)
